Fix footer social size and spacing

--- a/scss/2-molecules/_footer-social.scss
+++ b/scss/2-molecules/_footer-social.scss
@@ -5,9 +5,10 @@ footer {
 		gap: 1rem;
 		justify-content: center;
 		
-		a,i {
+		i {
+			padding: 6px;
 			color: $white;
-			font-size: 1.5rem;
+			font-size: 2rem;
 		}
 	}
 }
