--- a/scss/3-blocks/_footer.scss
+++ b/scss/3-blocks/_footer.scss
@@ -11,7 +11,7 @@
 		.footer-biz-data {
 			text-align: center;
 
-			div, .footer-title {
+			& > div, .footer-title {
 				margin-top: 1rem;
 			}
 	
